Styling changed, fixed alignment issues, added animation for teams

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -2,6 +2,9 @@ body
   font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
   color: white 
 // Helper Classes
+body html
+  min-height: 100%
+
 .full-width-image-container
   width: 100vw
   height: 400px
